--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,24 @@
         "memory": "c",
         "philosophers_utils.h": "c",
         "ratio": "c",
-        "ostream": "c"
+        "ostream": "c",
+        "__bit_reference": "c",
+        "__debug": "c",
+        "__functional_base": "c",
+        "__hash_table": "c",
+        "__mutex_base": "c",
+        "__tuple": "c",
+        "atomic": "c",
+        "memory_resource": "c",
+        "type_traits": "c",
+        "functional": "c",
+        "istream": "c",
+        "locale": "c",
+        "mutex": "c",
+        "new": "c",
+        "unordered_map": "c",
+        "utility": "c",
+        "vector": "c",
+        "__locale": "c"
     }
 }
